kubeflow/centraldashboard/upstream/overlays/istio/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: central-dashboard
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-ingress
  selector:
    matchLabels:
      app: centraldashboard
